--- a/src/Footer.css
+++ b/src/Footer.css
@@ -3,7 +3,7 @@
   bottom: 0;
   height: 8%;
   background-color: rgb(255, 255, 255);
-  width: 100%;
+  width: 400px;
   box-shadow: 0 -3px 0 0 #ebebeb;
   display: flex;
   align-items: center;
